updated sutdent life

--- a/portfolio.html
+++ b/portfolio.html
@@ -156,6 +156,8 @@
                         <button class="filters__button--items button" data-filter=".development">Development</button>
                         <button class="filters__button--items button" data-filter=".parttime">Part-Time</button>
                         <button class="filters__button--items button" data-filter=".student">Student-Life</button>
+                        <button class="filters__button--items button" data-filter=".achievement">Achievement</button>
+                        
                     </div>
                     <div class="portfolio__grid mb--n30">
                         <div class="element-item development" data-category="development">
@@ -382,6 +384,38 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="element-item student" data-category="student">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioStudent3">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliostudent3.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">President Multimedia Club</h3>
+                                        <p class="portfolio__desc text-white">Faculty of Computer Science, UPM</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item student" data-category="student">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioStudent4">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliostudent4.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">President Humanitarian Club</h3>
+                                        <p class="portfolio__desc text-white">Fifth College, UPM</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
                         <div class="element-item parttime" data-category="parttime">
                             <div class="portfolio__card">
                                 <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioParttime1">
@@ -410,6 +444,118 @@
                                         </span>
                                         <h3 class="portfolio__title text-white">Salinas Catering</h3>
                                         <p class="portfolio__desc text-white">Serving and Delivering Food Services</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item achievement" data-category="achievement">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioAchievement1">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfolioachievement1.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Best Student-Faculty</h3>
+                                        <p class="portfolio__desc text-white">Overall Award for Academic and Extracurricular </p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item achievement" data-category="achievement">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioAchievement2">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfolioachievement2.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Best Student-College</h3>
+                                        <p class="portfolio__desc text-white">Tinta Harmoni Award in Kolej Kelima, UPM</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item achievement" data-category="achievement">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioAchievement3">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfolioachievement3.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Excellence Award - College</h3>
+                                        <p class="portfolio__desc text-white">Best in Both Academic and Extracurricular</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item achievement" data-category="achievement">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioAchievement4">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfolioachievement4.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Putra Innocreative Competition</h3>
+                                        <p class="portfolio__desc text-white">Best Innocreative Educators</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item achievement" data-category="achievement">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioAchievement5">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfolioachievement5.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Putra Innocreative Competition - Poster</h3>
+                                        <p class="portfolio__desc text-white">Silver Medal</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item achievement" data-category="achievement">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioAchievement6">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfolioachievement6.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Battle of the Band UPM</h3>
+                                        <p class="portfolio__desc text-white">1st Place</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item achievement" data-category="achievement">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioAchievement7">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfolioachievement7.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Best Vocal Award</h3>
+                                        <p class="portfolio__desc text-white">Malam Anugerah Bintang, UPM</p>
                                     </div>
                                 </a>
                             </div>
