add design Portfolio

--- a/about-dark.html
+++ b/about-dark.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Morex - About Us</title>
+  <title>Sufi Firdaus - About Me</title>
   <meta name="description" content="Morden Bootstrap HTML5 Template">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/icon.ico">
     
    <!-- ======= All CSS Plugins here ======== -->
   <link rel="stylesheet" href="assets/css/plugins/swiper-bundle.min.css">
@@ -163,7 +163,6 @@
                                 <li class="about__info--items">Age: 24 Years</li>
                                 <li class="about__info--items">Email: you@mail.com</li>
                                 <li class="about__info--items">Nationality: Tunisian</li>
-                                <li class="about__info--items">Skype: Roben.Boris</li>
                                 <li class="about__info--items">Freelance: Available</li>
                                 <li class="about__info--items">Languages: French, English</li>
                             </ul>
