--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Morex - Portfolio</title>
+  <title>Sufi Firdaus - Portfolio</title>
   <meta name="description" content="Morden Bootstrap HTML5 Template">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/icons.ico">
     
    <!-- ======= All CSS Plugins here ======== -->
   <link rel="stylesheet" href="assets/css/plugins/swiper-bundle.min.css">
@@ -151,7 +151,7 @@
                 <div class="portfolio__section--inner">
                     <div class="button-group filters-button-group mb-50">
                         <button class="filters__button--items button is-checked" data-filter="*">Show All</button>
-                        <button class="filters__button--items button" data-filter=".web">Design</button>
+                        <button class="filters__button--items button" data-filter=".design">Design</button>
                         <button class="filters__button--items button" data-filter=".tutor">Tutor</button>
                         <button class="filters__button--items button" data-filter=".development">Development</button>
                         <button class="filters__button--items button" data-filter=".parttime">Part-Time</button>
@@ -560,6 +560,183 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign1">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign1.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Sticker Design</h3>
+                                        <p class="portfolio__desc text-white">Salinas Catering</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign2">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign2.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Poster Design</h3>
+                                        <p class="portfolio__desc text-white">KZ Yong Tau Foo</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign3">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign3.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Logo Design</h3>
+                                        <p class="portfolio__desc text-white">Youtube Channel</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign4">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign4.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Sticker Design</h3>
+                                        <p class="portfolio__desc text-white">Ferrera Cookies</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign5">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign5.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Booth Poster</h3>
+                                        <p class="portfolio__desc text-white">Conference Event</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign6">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign6.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Poster Design</h3>
+                                        <p class="portfolio__desc text-white">Car Wash BDBB</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign7">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign7.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">T-Shirt Design</h3>
+                                        <p class="portfolio__desc text-white">Kelab Generasi Fifth</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign8">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign8.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Wedding Card Design</h3>
+                                        <p class="portfolio__desc text-white">Khadijah Zuhari</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign9">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign9.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Tag Design</h3>
+                                        <p class="portfolio__desc text-white">Kelab Generasi Fifth</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign10">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign10.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Poster Event Design</h3>
+                                        <p class="portfolio__desc text-white">Kelab Generasi Fifth</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="element-item design" data-category="design">
+                            <div class="portfolio__card">
+                                <a href="#" class="popup-modal--open display-block" data-bs-toggle="modal" data-bs-target="#portfolioDesign11">
+                                    <div class="portfolio__image--card">
+                                    <img src="assets/img/other/portfoliodesign11.png" alt="img">
+                                    </div>
+                                    <div class="portfolio__content">
+                                        <span class="portfolio__zoom text-white">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                                        </span>
+                                        <h3 class="portfolio__title text-white">Program Poster</h3>
+                                        <p class="portfolio__desc text-white">Multimedia Club UPM</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
